Fix horizontal overflow

--- a/code/index.css
+++ b/code/index.css
@@ -448,7 +448,6 @@ em {
 code:not(.hljs) {
     padding: 0 0.3em;
     border-radius: 0.25em;
-    white-space: nowrap;
     background-color: var(--background-color-code);
 }
 
